@@ -61,6 +61,14 @@ INCOMPATIBILITY.
       isar_shrink ~> isar_compress
 
 
+*** System ***
+
+* Discontinued "isabelle usedir" option -P (remote path).  Note that
+usedir is legacy and superseded by "isabelle build" since
+Isabelle2013.
+
+
+
 New in Isabelle2013 (February 2013)
 -----------------------------------
 
